--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,10 @@
       name="description"
       content=""
     />
+    <meta
+          http-equiv="origin-trial"
+          content="Akg036tSj9uXEgZhbWkHn9DzzOvvfUmpw8LL5HBQLDfpiqcx0z9ogU2mvpS1Bc8Ph9/vp6I0lkavwt2gtV+d+wgAAAB6eyJvcmlnaW4iOiJodHRwczovL2RhcHAtdGVzdGluZy1uaW5lLnZlcmNlbC5hcHA6NDQzIiwiZmVhdHVyZSI6IkRpc2FibGVUaGlyZFBhcnR5U3RvcmFnZVBhcnRpdGlvbmluZyIsImV4cGlyeSI6MTcyNTQwNzk5OX0="
+    />
 
     <title>React Template</title>
   </head>
