--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,10 @@
           http-equiv="origin-trial"
           content="AgDCDRf82yVk/XNFgMXKlSDieB9XPSHbHjq1GeqftVbqJL+3WUsMbgb2oymZC7l+tgH7JuTvPrv7UDKbIq84rw0AAACNeyJvcmlnaW4iOiJodHRwczovL2RhcHAtcHJvZC10ZXN0aW5nLnZlcmNlbC5hcHA6NDQzIiwiZmVhdHVyZSI6IkRpc2FibGVUaGlyZFBhcnR5U3RvcmFnZVBhcnRpdGlvbmluZyIsImV4cGlyeSI6MTcyNTQwNzk5OSwiaXNTdWJkb21haW4iOnRydWV9"
     />
-
+    <!-- <meta
+    http-equiv="origin-trial"
+    content="AlU4GUR1ZBasFEUCNe8USkx7GSokITQbNSdgFlU9Zrg6aP+ThjAbiDdKq0gXIdk/agcphCw4k/hxIBcSD4wilQ8AAABneyJvcmlnaW4iOiJodHRwOi8vbG9jYWxob3N0OjMwMDAiLCJmZWF0dXJlIjoiRGlzYWJsZVRoaXJkUGFydHlTdG9yYWdlUGFydGl0aW9uaW5nIiwiZXhwaXJ5IjoxNzI1NDA3OTk5fQ=="
+  /> -->
     <title>React Template</title>
   </head>
   <body>
