--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="https://svgshare.com/i/10zF.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -14,7 +14,7 @@
           content="Akg036tSj9uXEgZhbWkHn9DzzOvvfUmpw8LL5HBQLDfpiqcx0z9ogU2mvpS1Bc8Ph9/vp6I0lkavwt2gtV+d+wgAAAB6eyJvcmlnaW4iOiJodHRwczovL2RhcHAtdGVzdGluZy1uaW5lLnZlcmNlbC5hcHA6NDQzIiwiZmVhdHVyZSI6IkRpc2FibGVUaGlyZFBhcnR5U3RvcmFnZVBhcnRpdGlvbmluZyIsImV4cGlyeSI6MTcyNTQwNzk5OX0="
     />
 
-    <title>React Template</title>
+    <title>Tria Demo</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
