added polygon mint

--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,12 @@
           content="AuFLX1xRL/Dz9SwpbJVgaTKgsBJFMedbIJ7TjqXByXjemFk2ZQxmaZCRPVYGTrcX7C7DvFetIuOEsdd6N7pnBQcAAACFeyJvcmlnaW4iOiJodHRwczovL2RlbW8tdHJpYS52ZXJjZWwuYXBwOjQ0MyIsImZlYXR1cmUiOiJEaXNhYmxlVGhpcmRQYXJ0eVN0b3JhZ2VQYXJ0aXRpb25pbmciLCJleHBpcnkiOjE3MjU0MDc5OTksImlzU3ViZG9tYWluIjp0cnVlfQ=="
     />
 
+    <!-- <meta
+    http-equiv="origin-trial"
+    content=" AlU4GUR1ZBasFEUCNe8USkx7GSokITQbNSdgFlU9Zrg6aP+ThjAbiDdKq0gXIdk/agcphCw4k/hxIBcSD4wilQ8AAABneyJvcmlnaW4iOiJodHRwOi8vbG9jYWxob3N0OjMwMDAiLCJmZWF0dXJlIjoiRGlzYWJsZVRoaXJkUGFydHlTdG9yYWdlUGFydGl0aW9uaW5nIiwiZXhwaXJ5IjoxNzI1NDA3OTk5fQ=="
+/> -->
+
+   
     <title>Tria Demo</title>
   </head>
   <body>
