--- a/public/index.html
+++ b/public/index.html
@@ -1,30 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="https://svgshare.com/i/10zF.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content=""
-    />
-    <meta
-          http-equiv="origin-trial"
-          content="AuFLX1xRL/Dz9SwpbJVgaTKgsBJFMedbIJ7TjqXByXjemFk2ZQxmaZCRPVYGTrcX7C7DvFetIuOEsdd6N7pnBQcAAACFeyJvcmlnaW4iOiJodHRwczovL2RlbW8tdHJpYS52ZXJjZWwuYXBwOjQ0MyIsImZlYXR1cmUiOiJEaXNhYmxlVGhpcmRQYXJ0eVN0b3JhZ2VQYXJ0aXRpb25pbmciLCJleHBpcnkiOjE3MjU0MDc5OTksImlzU3ViZG9tYWluIjp0cnVlfQ=="
-    />
 
-    <!-- <meta
+<head>
+  <meta charset="utf-8" />
+  <link rel="icon" href="https://svgshare.com/i/10zF.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#000000" />
+  <meta name="description" content="" />
+  <meta http-equiv="origin-trial"
+    content="AuFLX1xRL/Dz9SwpbJVgaTKgsBJFMedbIJ7TjqXByXjemFk2ZQxmaZCRPVYGTrcX7C7DvFetIuOEsdd6N7pnBQcAAACFeyJvcmlnaW4iOiJodHRwczovL2RlbW8tdHJpYS52ZXJjZWwuYXBwOjQ0MyIsImZlYXR1cmUiOiJEaXNhYmxlVGhpcmRQYXJ0eVN0b3JhZ2VQYXJ0aXRpb25pbmciLCJleHBpcnkiOjE3MjU0MDc5OTksImlzU3ViZG9tYWluIjp0cnVlfQ==" />
+
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-8B9M5DSMB4"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-8B9M5DSMB4');
+  </script>
+
+  <!-- <meta
     http-equiv="origin-trial"
     content=" AlU4GUR1ZBasFEUCNe8USkx7GSokITQbNSdgFlU9Zrg6aP+ThjAbiDdKq0gXIdk/agcphCw4k/hxIBcSD4wilQ8AAABneyJvcmlnaW4iOiJodHRwOi8vbG9jYWxob3N0OjMwMDAiLCJmZWF0dXJlIjoiRGlzYWJsZVRoaXJkUGFydHlTdG9yYWdlUGFydGl0aW9uaW5nIiwiZXhwaXJ5IjoxNzI1NDA3OTk5fQ=="
 /> -->
 
-   
-    <title>Tria Demo</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
 
-  </body>
+  <title>Tria Demo</title>
+</head>
+
+<body>
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <div id="root"></div>
+
+</body>
+
 </html>
