--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="" />
-  <!-- <meta http-equiv="origin-trial"
-    content="AnY09mQt39VfRJii6ws7LJpUs9JF8nyWyxvvADyw0L34MVqq5JXywwiO4OmbTogki+Rx4pHkicSD+qSwk0Zdng0AAACNeyJvcmlnaW4iOiJodHRwczovL2RlbW8tdHJpYS1zdGFnaW5nLnZlcmNlbC5hcHA6NDQzIiwiZmVhdHVyZSI6IkRpc2FibGVUaGlyZFBhcnR5U3RvcmFnZVBhcnRpdGlvbmluZyIsImV4cGlyeSI6MTcyNTQwNzk5OSwiaXNTdWJkb21haW4iOnRydWV9" /> -->
+  <meta http-equiv="origin-trial"
+    content="AnY09mQt39VfRJii6ws7LJpUs9JF8nyWyxvvADyw0L34MVqq5JXywwiO4OmbTogki+Rx4pHkicSD+qSwk0Zdng0AAACNeyJvcmlnaW4iOiJodHRwczovL2RlbW8tdHJpYS1zdGFnaW5nLnZlcmNlbC5hcHA6NDQzIiwiZmVhdHVyZSI6IkRpc2FibGVUaGlyZFBhcnR5U3RvcmFnZVBhcnRpdGlvbmluZyIsImV4cGlyeSI6MTcyNTQwNzk5OSwiaXNTdWJkb21haW4iOnRydWV9" />
 
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-8B9M5DSMB4"></script>
   <script>
@@ -19,10 +19,10 @@
     gtag('config', 'G-8B9M5DSMB4');
   </script>
 
-  <meta
+  <!-- <meta
     http-equiv="origin-trial"
     content="AlU4GUR1ZBasFEUCNe8USkx7GSokITQbNSdgFlU9Zrg6aP+ThjAbiDdKq0gXIdk/agcphCw4k/hxIBcSD4wilQ8AAABneyJvcmlnaW4iOiJodHRwOi8vbG9jYWxob3N0OjMwMDAiLCJmZWF0dXJlIjoiRGlzYWJsZVRoaXJkUGFydHlTdG9yYWdlUGFydGl0aW9uaW5nIiwiZXhwaXJ5IjoxNzI1NDA3OTk5fQ=="
-/>
+/> -->
 
 
   <title>Tria Demo</title>
